k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
    # this right here is what setsup the request on the pod
    # to reach the kubernetes and say i need storage option
    # and give me an option of the claimName i have provided
    # so all this is gonna do here is allocate that storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
       - name: postgres
         image: postgres
         
         ports:
          - containerPort: 5432
          # so this right here is gonna say ok we got the storage.
          # now this is how we want to use it with the container
         volumeMounts:
         # this is gonna find the volume that we have created above
          - name: postgres-storage
          # mountPath is the place which we want to back up on our storage option
          # this is the place where postgres store its data there we
          # will backup this folder
            mountPath: /var/lib/postgresql/data
            # it means store the data on storage under this folder on my machine
            subPath: postgres
