k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
    # we gonna put our pod template
  template:
    metadata:
      labels:
        component: server
      # this is gonna customise the exact behaviour of each of the pods 
       # gets created
    spec:
      containers:
        - name: server
          image: iamnoman07/multi-server
          ports:
           - containerPort: 5000
