k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  # this will tell the service what set of pods it should provide access to
  selector:
    component: server
  ports:
    - port: 5000
      targetPort: 5000
